<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RequestForm">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".RequestForm">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="358dp"
        android:layout_height="226dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/books"
        android:contentDescription="@string/image_description"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/header_entry"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/request_name"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/request_date"
        android:inputType="date" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/request_isbn"
        android:inputType="number" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/request_title"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/request_author"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_submit" />
</LinearLayout>
</ScrollView>